--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Secret Santa</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href={{ url_for('static', path='/styles.css') }} />
 </head>
 <body>
   <header class="title-bar">
@@ -12,13 +12,7 @@
   </header>
 
   <main>
-    <section class="list-section">
-      <div class="list-header">Item Name</div>
-      <ul class="item-list">
-        <li>Item 1</li>
-        <li>Item 2</li>
-      </ul>
-    </section>
+    {% block main %}{% endblock %}
   </main>
 </body>
 </html>
