--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -19,6 +19,9 @@ body {
 
 main {
   padding: 1rem;
+  margin: 0 auto;
+  /* width: 100vw;  */
+  max-width: 600px;
 }
 
 .list-section {
@@ -100,4 +103,8 @@ input[type="submit"]:hover {
 input, button, textarea, select {
   font-family: inherit;
   color: ghostwhite;
+}
+
+li a {
+  all: unset;
 }
