--- a/app/templates/exchange.html
+++ b/app/templates/exchange.html
@@ -1,1 +1,10 @@
-<li>{{ name }}</li>
+{% extends "index.html" %}
+{% block main %}
+<section class="list-section">
+  <div class="list-header">{{ name }}</div>
+  <ul class="item-list">
+    <li>No santas :(</li>
+  </ul>
+</section>
+
+{% endblock main %}
