--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,13 @@
   </header>
   <main>
     {% block main %}
-    <p><a href="{{ url_for('get_exchanges') }}">Exchanges</a></p>
+    <section class="list-section">
+      <div class="list-header">Menu</div>
+        <ul class="item-list">
+          <li><a href="{{ url_for('get_exchanges') }}">View Exchanges</a></li>
+        </ul>
+</section>
+<p class="item-list"><a href="{{ url_for('get_exchanges') }}">Exchanges</a></p>
     {% endblock %}
   </main>
 </body>
